--- a/src/OnlineShopping.fxml
+++ b/src/OnlineShopping.fxml
@@ -87,7 +87,7 @@
                         <Font name="Eras Demi ITC" size="22.0" />
                      </font>
                   </Label>
-                  <Button fx:id="save" layoutX="531.0" layoutY="826.0" mnemonicParsing="false" onAction="#savePrice" text="Save Selection">
+                  <Button fx:id="save" layoutX="531.0" layoutY="826.0" mnemonicParsing="false" onAction="#savePrice" text="Add to Cart">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -110,7 +110,7 @@
                      </font>
                   </Label>
                   <TextField fx:id="totalPrice" editable="false" layoutX="329.0" layoutY="824.0" onAction="#addPrice" prefHeight="35.0" prefWidth="149.0" />
-                  <Button fx:id="payment" layoutX="368.0" layoutY="911.0" mnemonicParsing="false" onAction="#proceedToPayment" text="Proceed to Payment">
+                  <Button fx:id="payment" layoutX="418.0" layoutY="903.0" mnemonicParsing="false" onAction="#proceedToPayment" text="View Cart">
                      <font>
                         <Font size="15.0" />
                      </font>
